--- a/lavis/configs/datasets/llava_instruction/defaults_instruction.yaml
+++ b/lavis/configs/datasets/llava_instruction/defaults_instruction.yaml
@@ -4,7 +4,7 @@
  # For full license text, see the LICENSE file in the repo root or https://opensource.org/licenses/BSD-3-Clause
 
 datasets:
-  minigpt4_instruction:
+  llava_instruction:
     # data_dir: ${env.data_dir}/datasets
     data_type: images # [images|videos|features]
 
@@ -12,7 +12,7 @@ datasets:
       # Be careful not to append minus sign (-) before split to avoid itemizing
       annotations:
         train:
-          url: /export/dataset/minigpt4/minigpt4_minigpt4qwen_format.json
-          storage: dataset/minigpt4/minigpt4_minigpt4qwen_format.json
+          url: /export/dataset/llava/llava_minigpt4qwen_format.json
+          storage: dataset/llava/llava_minigpt4qwen_format.json
       images:
-          storage: dataset/minigpt4/image
+          storage: dataset/llava/image
