--- a/lavis/projects/instruction_tuning/train.yaml
+++ b/lavis/projects/instruction_tuning/train.yaml
@@ -54,7 +54,16 @@ datasets:
           image_size: 224
     text_processor:
         train:
-          name: "minigpt4qwen_caption"
+          name: "base_instruction"
+          max_words: 100
+  llava_instruction: # name of the dataset builder
+    vis_processor:
+        train:
+          name: "blip2_image_train"
+          image_size: 224
+    text_processor:
+        train:
+          name: "base_instruction"
           max_words: 100
 
 run:
@@ -78,9 +87,9 @@ run:
   num_beams: 5 # 同上
 
   seed: 42
-  output_dir: "output/debug"
+  output_dir: "output/instruction_tuning"
 
-  amp: True
+  amp: False # True
   resume_ckpt_path: null
 
   evaluate: False
