--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,3 @@
-# pycharm
-.idea/
-
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -164,3 +161,9 @@ cache/
 
 # test
 test_model_generate.py
+
+# pycharm .idea
+.idea/
+
+# wandb
+wandb/
