--- a/lavis/projects/pp_qwen14b/sft_pp.yaml
+++ b/lavis/projects/pp_qwen14b/sft_pp.yaml
@@ -1,12 +1,12 @@
 model:
   arch: minigpt4qwen
   model_type: qwen14b_chat
-  load_finetuned: False
+  load_finetuned: True
   load_pretrained: True
 
   # pretrained: "https://storage.googleapis.com/sfr-vision-language-research/LAVIS/models/InstructBLIP/blip2_pretrained_flant5xxl.pth"
   pretrained: "ckpt/blip2/blip2_pretrained_flant5xxl.pth"
-  finetuned: ""
+  finetuned: "/root/MiniGPT4Qwen/lavis/output/pp_14b/pretrain/global_step2181/model.pth"
 
   # vit encoder
   vit_model: "eva_clip_g"
@@ -42,7 +42,16 @@ model:
   enable_autocast: False
 
 datasets:
-  llava_pretrain: # name of the dataset builder
+  minigpt4_instruction: # name of the dataset builder
+    vis_processor:
+        train:
+          name: "blip2_image_train"
+          image_size: 224
+    text_processor:
+        train:
+          name: "base_instruction"
+          max_words: 200
+  llava_instruction: # name of the dataset builder
     vis_processor:
         train:
           name: "blip2_image_train"
@@ -53,7 +62,7 @@ datasets:
           max_words: 200
 
 run:
-  output_dir: "lavis/output/pp_14b/pretrain/"
+  output_dir: "lavis/output/pp_14b/instruction_tuning/"
 
   task: deepspeed_image_text_pretrain
 
@@ -65,19 +74,18 @@ run:
   dist_url: "env://"
   distributed: True
 
-  max_epoch: 1
+  max_epoch: 2
   log_freq: 10
 
   lr_sched: "linear_warmup_cosine_lr_step-wise"
   warmup_lr: 0
-  init_lr: 1e-3
+  init_lr: 2e-5
   min_lr: 0
-  warmup_ratio: 0.03
-  
+  warmup_ratio: 0.3
 
   deepspeed_config:
-    # global batch = 256 = n_ranks * grad_acc_steps * micro_batch_size = (2//2) * 256 * 1
-    gradient_accumulation_steps: 256
+    # global batch = 128 = n_ranks * grad_acc_steps * micro_batch_size = (2//2) * 128 * 1
+    gradient_accumulation_steps: 128 # 64
     train_micro_batch_size_per_gpu: 1
 
     gradient_clipping: 1.
@@ -99,7 +107,7 @@ run:
     optimizer:
         type: "AdamW"
         params:
-            lr: 1e-3
+            lr: 2e-5
             betas: [0.9,0.99]
             eps: 1e-7
             weight_decay: 0.
