--- a/lavis/projects/pp_qwen14b/sft_pp.yaml
+++ b/lavis/projects/pp_qwen14b/sft_pp.yaml
@@ -29,6 +29,9 @@ model:
   # path to Vicuna checkpoint
   llm_model: "ckpt/Qwen-14B-Chat"
 
+  # unfreeze LLM for better chat
+  freeze_llm: False
+
   # lora config
   get_lora: False
   lora_alpha: 32
@@ -62,7 +65,7 @@ datasets:
           max_words: 200
 
 run:
-  output_dir: "lavis/output/pp_14b/instruction_tuning/"
+  output_dir: "lavis/output/pp_14b/sft/"
 
   task: deepspeed_image_text_pretrain
 
@@ -74,7 +77,7 @@ run:
   dist_url: "env://"
   distributed: True
 
-  max_epoch: 2
+  max_epoch: 1
   log_freq: 10
 
   lr_sched: "linear_warmup_cosine_lr_step-wise"
@@ -84,7 +87,7 @@ run:
   warmup_ratio: 0.3
 
   deepspeed_config:
-    # global batch = 128 = n_ranks * grad_acc_steps * micro_batch_size = (2//2) * 128 * 1
+    # global batch = 128 = n_ranks * grad_acc_steps * micro_batch_size = (4//2) * 64 * 1
     gradient_accumulation_steps: 128 # 64
     train_micro_batch_size_per_gpu: 1
 
@@ -113,7 +116,10 @@ run:
             weight_decay: 0.
 
     zero_optimization:
-        stage: 0
+        stage: 1
+        offload_optimizer:
+          device: "cpu"
+          pin_memory: true
         allgather_partitions: true
         allgather_bucket_size: 2e8
         overlap_comm: true
