--- a/lavis/configs/models/minigpt4qwen/minigpt4qwen-14b.yaml
+++ b/lavis/configs/models/minigpt4qwen/minigpt4qwen-14b.yaml
@@ -32,6 +32,7 @@ model:
 
   # path to Vicuna checkpoint
   llm_model: "ckpt/Qwen-14B-Chat"
+  llm_device_map: "cpu"
 
   # lora config
   get_lora: False
