modify the deepspeed config, converting to llava-setting

--- a/deepspeed_tutorials/ds_configs/ds_config_zero1.json
+++ b/deepspeed_tutorials/ds_configs/ds_config_zero1.json
@@ -41,11 +41,8 @@
             "device": "cpu",
             "pin_memory": true
         },
-        "allgather_partitions": true,
-        "allgather_bucket_size": 2e8,
         "overlap_comm": true,
-        "reduce_scatter": true,
-        "reduce_bucket_size": 2e8,
-        "contiguous_gradients": true
+        "contiguous_gradients": true,
+        "sub_group_size": 1e9
     }
 }
