--- a/lavis/projects/deepspeed/train_zero0_3090x4.yaml
+++ b/lavis/projects/deepspeed/train_zero0_3090x4.yaml
@@ -122,10 +122,7 @@ run:
 
     zero_optimization:
         stage: 0
-        allgather_partitions: True
-        allgather_bucket_size: 2e8
         overlap_comm: True
-        reduce_scatter: True
-        reduce_bucket_size: 2e8
         contiguous_gradients: True
+        sub_group_size: 1e9
 
