--- a/deepspeed_tutorials/ds_configs/ds_config_zero0.json
+++ b/deepspeed_tutorials/ds_configs/ds_config_zero0.json
@@ -37,11 +37,8 @@
 
     "zero_optimization": {
         "stage": 0,
-        "allgather_partitions": true,
-        "allgather_bucket_size": 2e8,
         "overlap_comm": true,
-        "reduce_scatter": true,
-        "reduce_bucket_size": 2e8,
-        "contiguous_gradients": true
+        "contiguous_gradients": true,
+        "sub_group_size": 1e9
     }
 }
